test/classes/initializers/parentCall/inLoopTopLevel.good
inLoopTopLevel.chpl:14: error: use of super.init() call in loop body
